# asgiri

./: .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  CLI.md  LICENSE  PROJECT_STATUS.md  README.md  WEBSOCKET_IMPLEMENTATION.md  generate_cert.py  pyproject.toml
.github/: dependabot.yml  release-drafter.yml  stale.yml
.github/workflows/: publish-to-pypi.yml  release-drafter.yml  security_scan.yml  test.yml  unit_tests.yml
asgiri/: __init__.py  __main__.py  app_loader.py  asyncio_utils.py  cli.py  exceptions.py  loader.py  middleware.py  server.py  spec.py  ssl_utils.py  util.py  workers.py
asgiri/extensions/: tls.py
asgiri/middlewares/: __init__.py  proxy.py  proxy_aware.py
asgiri/middlewares/session/: __init__.py  database.py  inmemory.py  mongodb.py  redis.py
asgiri/proto/: auto.py  http11.py  http2.py  http3.py  websocket.py  websocket_frames.py  websocket_handler.py  websocket_http11.py
docs/: ARCHITECTURE.md  CLI.md  HTTP3_IMPLEMENTATION.md  PROTOCOL_SWITCHING.md  QUICK_REFERENCE.md  WEBSOCKETS_HTTP3.md  WEBTRANSPORT.md
scripts/: README.md  benchmark.py  locustfile.py  pre_commit.py  setup_git_hooks.py
tests/: SECURITY_TESTS.md  WEBSOCKET_TESTS_README.md  app.py  test_alpn.py  test_auto_protocol.py  test_cli.py  test_h2c_upgrade.py  test_header_size_limits.py  test_http2_errors.py  test_http2_flow_control.py  test_http3.py  test_http3_errors.py  test_http3_integration.py  test_http3_websocket.py  test_large_file_uploads.py  test_lifespan_scope.py  test_load.py  test_security.py  test_server.py  test_server_lifecycle.py  test_ssl_utils.py  test_tls_extension.py  test_tls_integration.py  test_websocket.py  test_websocket_protocol.py  test_webtransport.py
