[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asgiri"
version = "0.2.1"
url = "https://github.com/jrialland/asgiri"
license = {text = "MIT"}
authors = [
    {name = "Julien Rialland", email = "julien.rialland@gmail.com"},
]
description = "Yet another ASGI server implementation."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "aioquic>=1.3.0",
    "asgiref>=3.10.0",
    "cryptography>=46.0.3",
    "h11>=0.16.0",
    "h2>=4.3.0",
    "loguru>=0.7.3",
    "rfc3986>=2.0.0",
    "wsproto>=1.2.0",
]

[project.optional-dependencies]
uvloop = ["uvloop>=0.21.0"]

[project.scripts]
asgiri = "asgiri.__main__:main"

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "black>=25.9.0",
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "locust>=2.33.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
]

[tool.black]
line-length = 80
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks security-focused tests",
]
# Exclude slow tests by default in pre-commit
addopts = "-v"

[[tool.mypy.overrides]]
module = ["asgiri.*"]
ignore_missing_imports = true
